==> badgeteam/mch2022-firmware-rp2040/msc.c <==
#include "bsp/board.h"
#include "tusb.h"
#include "i2c_peripheral.h"
#include "hardware/dma.h"
#include "hardware/structs/dma.h"
#include "hardware.h"
#include "uart_task.h"
#define MSC_CMD_SYNC (('S' << 0) | ('Y' << 8) | ('N' << 16) | ('C' << 24))  // Echo back empty response
#define MSC_CMD_PING (('P' << 0) | ('I' << 8) | ('N' << 16) | ('G' << 24))  // Echo payload back to PC
#define MSC_CMD_READ (('R' << 0) | ('E' << 8) | ('A' << 16) | ('D' << 24))  // Read block
#define MSC_CMD_WRIT (('W' << 0) | ('R' << 8) | ('I' << 16) | ('T' << 24))  // Write block
#define MSC_ANS_OKOK (('O' << 0) | ('K' << 8) | ('O' << 16) | ('K' << 24))
#define README_CONTENTS \
"This is tinyusb's MassStorage Class demo.\r\n\r\n\
If you find any bugs or get any questions, feel free to file an\r\n\
issue at github.com/hathach/tinyusb"

void tud_msc_capacity_cb(uint8_t lun, uint32_t* block_count, uint16_t* block_size) {
  *block_count = i2c_get_msc_block_count(lun);
  *block_size  = i2c_get_msc_block_size(lun);
}

int32_t tud_msc_read10_cb(uint8_t lun, uint32_t lba, uint32_t offset, void* buffer, uint32_t bufsize) {
    char logbuf[64];
    sprintf(logbuf, "read10 %u, %u, %u, %u\r\n", lun, lba, offset, bufsize);
    cdc_send(0, logbuf, strlen(logbuf));

    if (bufsize > 4096) {
        bufsize = 4096;
    }

    if (lba >= i2c_get_msc_block_count(lun)) {
        sprintf(logbuf, "read10 out of range: %u > %u\r\n", lba, i2c_get_msc_block_count(lun));
        cdc_send(0, logbuf, strlen(logbuf));
        return -1;
    }

    flush_uart();

    msc_packet_t packet = {0};
    packet.header.magic = msc_packet_magic;
    packet.header.command = MSC_CMD_READ;
    packet.header.payload_length = sizeof(msc_payload_t);
    packet.payload.lun = lun;
    packet.payload.lba = lba;
    packet.payload.offset = offset;
    packet.payload.length = bufsize;
    packet.header.payload_crc = calc_crc32((void*) &packet.payload, sizeof(msc_payload_t));
    uart_write_blocking(UART_ESP32, (uint8_t*) &packet, sizeof(packet));

    uart_read_blocking(UART_ESP32, msc_buffer, bufsize + sizeof(msc_response_header_t));

    /*sprintf(logbuf, "Response from ESP32\r\n");
    cdc_send(0, logbuf, strlen(logbuf));*/

    memcpy(buffer, msc_buffer + sizeof(msc_response_header_t), bufsize);

    return (int32_t) bufsize;
}

int32_t tud_msc_write10_cb(uint8_t lun, uint32_t lba, uint32_t offset, uint8_t* buffer, uint32_t bufsize) {
    char logbuf[256] = {0};
    sprintf(logbuf, "write10 %u, %u, %u, %u\r\n", lun, lba, offset, bufsize);
    cdc_send(0, logbuf, strlen(logbuf));

    if (bufsize > 4096) {
        bufsize = 4096;
    }

    if (lba >= i2c_get_msc_block_count(lun)) {
        sprintf(logbuf, "write10 out of range: %u > %u\r\n", lba, i2c_get_msc_block_count(lun));
        cdc_send(0, logbuf, strlen(logbuf));
        return -1;
    }

    cdc_send(0, logbuf, strlen(logbuf));
    flush_uart();
    cdc_send(0, logbuf, strlen(logbuf));
    memset(msc_buffer, 0, sizeof(msc_packet_t));
    cdc_send(0, logbuf, strlen(logbuf));
    memcpy(&msc_buffer[sizeof(msc_packet_t)], buffer, bufsize);
    cdc_send(0, logbuf, strlen(logbuf));
    msc_packet_t* packet = (msc_packet_t*) msc_buffer;
    packet->header.magic = msc_packet_magic;
    packet->header.command = MSC_CMD_WRIT;
    packet->header.payload_length = sizeof(msc_payload_t) + bufsize;
    packet->payload.lun = lun;
    packet->payload.lba = lba;
    packet->payload.offset = offset;
    packet->payload.length = bufsize;
    packet->header.payload_crc = calc_crc32((void*) &(packet->payload), sizeof(msc_payload_t) + bufsize);
    cdc_send(0, logbuf, strlen(logbuf));

    uint32_t position = 0;
    while (position < (sizeof(msc_packet_t) + bufsize)) {
        uint32_t txSize = sizeof(msc_packet_t) + bufsize - position;
        if (txSize > 64) {
            txSize = 64;
        }
        uart_write_blocking(UART_ESP32, &msc_buffer[position], txSize);
        position += txSize;
        sleep_us(250);
    }

    uart_read_blocking(UART_ESP32, msc_buffer, sizeof(msc_response_header_t));

    if (packet->header.magic != msc_packet_magic) {
        sprintf(logbuf, "write10 response magic invalid\r\n");
        cdc_send(0, logbuf, strlen(logbuf));
        return -1;
    }

    if (packet->header.command != MSC_ANS_OKOK) {
        sprintf(logbuf, "write10 response not OK\r\n");
        cdc_send(0, logbuf, strlen(logbuf));
        return -1;
    }
    
    return (int32_t) bufsize;
}
